<resources>
    <string name="app_name">ImpetrosysDev</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login\t\t\t</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">logout</string>
    <string name="create_new_account">Create new Account</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="full_name">Full Name</string>
    <string name="new_user_to_register">New User to register</string>
    <string name="otp_number">OTP Number</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="get_otp">get OTP</string>
    <string name="my_profile">My profile</string>
    <string name="users_profile">Users Profile</string>
    <string name="new_user_click_to_register">New User ? click to register</string>
    <string name="forgot_password">Forgot Password ?</string>
</resources>